--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "name": "adangel/chunkphp",
+    "description": "Simple hosting of temporary files",
+    "license": "MIT",
     "require": {
         "php": "^7.2",
         "ext-zip": "*",
