--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -15,20 +15,10 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Validate composer.json and composer.lock
-      run: composer validate
-      
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v4
-      with:
-        path: vendor
-        key: ${{ runner.os }}-node-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-node-
+      run: ./tools/composer validate
 
     - name: Install dependencies
-      if: steps.composer-cache.outputs.cache-hit != 'true'
-      run: composer install --prefer-dist --no-progress --no-suggest
+      run: ./tools/composer install --no-interaction --no-progress
 
     - name: Run test suite
-      run: composer test
+      run: ./tools/phpunit --bootstrap vendor/autoload.php tests
